fix `CompilerMagics.compile` package path;remain jupyter.env